# vm-compiler

./: .clang-format  CMakeLists.txt  grammar.md  main.cpp
files/: CMakeLists.txt  files.h  linux_files_impl.cpp  platform_selector.h  win_files_impl.cpp  win_mmap_file_impl.h
lexer/: CMakeLists.txt  converters.cpp  converters.h  lexer.cpp  lexer.h  operator_trie.cpp  operator_trie.h  token.cpp  token.h
logger/: CMakeLists.txt  logging.cpp  logging.h
parser/: CMakeLists.txt  access_expression.h  base.h  base_classes.h  base_parse_impl.cpp  basic_block.h  class.h  class_impl.cpp  class_parse_impl.cpp  classloader.h  declaration.h  enhanced_for.h  expression.h  expression_impl.cpp  for.h  if.h  ifelse.h  impl_common.h  loop_control.h  method.h  modifiers.h  nary_expression.h  new.h  node_type.h  output.h  parser.cpp  parser.h  return.h  returns.h  scope.h  semicolon.h  source_file.h  statement.h  statement_impl.cpp  switch.h  symbol_table.h  throw.h  token_stream.h  type.h  type_parse_impl.cpp  (+3 more)
